# hellopatient-chatbot

./: Makefile  README.md  chatbot.sublime-project  docker-compose.yml  pyrightconfig.json
backend/: .pylintrc  pyproject.toml
backend/docs/: project-toml.md  python-3.13-install-issues.md
backend/migrations/: env.py
backend/server/: api_models.py  db_engine.py  db_models.py  main.py  models.py  seed.py  utilities.py
frontend/: eslint.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: chat.tsx
frontend/app/list-messages/: list-messages.tsx
frontend/app/send-message/: send-message.tsx
frontend/models/: messages.ts  user.ts
