[tool.poetry]
name = "backend"
version = "0.1.0"
package-mode = false


[tool.poetry.dependencies]
python = ">3.9"
fastapi = "*"
sqlalchemy = "*"
asyncpg = "*"
greenlet = "*"
psycopg2 = "*"
uvicorn = "*"
mypy = "^1.15.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"
pylint-pydantic = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
